[style] apply google code style